// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

[[v2.1.0]]
v2.1.0 (unreleased)
-------------------

Added
~~~~~

- New `:screenshot` command which can be used to screenshot the visible part of
  the page.

Changed
~~~~~~~

- Initial support for Qt 5.15.3
- On Linux, qutebrowser now tries harder to find details about the installed
  QtWebEngine version by inspecting the QtWebEngine binary. This should reduce
  issues with dark mode not working when using differing (Py)QtWebEngine versions
  and also prepare qutebrowser for QtWebEngine 5.15.3, which will get released
  without an updated Qt.

Fixed
~~~~~

- The `colors.webpage.prefers_color_scheme_dark` and `colors.webpage.darkmode.*`
  settings now work correctly with the upcoming QtWebEngine 5.15.3 (and Gentoo,
  which at the time of writing packages 5.15.3 disguised as 5.15.2).
- When dark mode settings were set, existing `blink-features` arguments in
  `qt.args` (or `--qt-flag`) were overridden. They are now combined properly.


[[v2.0.2]]
v2.0.2 (2021-02-04)
-------------------

Fixed
~~~~~

- When right-clicking an empty part of the downloads bar, qutebrowser v2.0.x
  would crash. This is now fixed.
- Setting `content.cookies.store` to `false` only worked properly when this was
  done after qutebrowser was already started due to a regression in v2.0.0. It now
  works as expected again.
- If qutebrowser was installed as a Python egg with Python 3.8 or 3.9,
  requesting unavailable resource files (such as PDF.js not being bundled, or a
  missing changelog file) caused in a crash due to an inconsistent behavior in
  those versions of Python. This is now handled properly by qutebrowser.
- In v2.0.0, support for importing the `sip` dependency as `sip` rather than
  `PyQt5.sip` was dropped, since upstream claims it should be used as `PyQt5.sip`